--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <!-- Row -->
               <div class="row">
                 <div class="col-md-12">
-                  <img src="/img/committee/aparna.jpg" alt="wrapkit" class="img-fluid rounded-circle" />
+                  <img src="img/committee/aparna.jpg" alt="wrapkit" class="img-fluid rounded-circle" />
                 </div>
                 <div class="col-md-12 text-center">
                   <div class="pt-2">
@@ -230,7 +230,7 @@
               <!-- Row -->
               <div class="row">
                 <div class="col-md-12">
-                  <img src="/img/committee/gajalakshmi-2.jpg" alt="wrapkit" class="img-fluid rounded-circle" />
+                  <img src="img/committee/gajalakshmi-2.jpg" alt="wrapkit" class="img-fluid rounded-circle" />
                 </div>
                 <div class="col-md-12 text-center">
                   <div class="pt-2">
