--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="col-xl-5 offset-xl-1 col-md-6">
                     <div class="about_info">
                         <div class="section_title">
-                            <span class="sub_heading">Welcome To</span>
+                            <span class="sub_heading">Welcome to</span>
                             <h3>The Biggest International <br>
                                 Conference of the <br>
                                 Year 2025</h3>
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                         <div class="speaker_name text-center">
-                            <h3>Mr.Suresh Ranganathan</h3>
+                            <h3>Mr.Suresh Renganathan</h3>
                             <p>
                                 Chief Technology Officer</p>
                                 <p>Teachers Federal Credit Union</p>
@@ -311,7 +311,7 @@
                             </div>
                         </div>
                         <div class="speaker_name text-center">
-                            <h3>Narayanan Ananthasayanam</h3>
+                            <h3>Mr.Narayanan Ananthasayanam</h3>
                             <p>Global Deputy IT Director/Head of Digital IT at Avolta</p>
                             <p>Basel, Switzerland</p>
                         </div>
@@ -327,7 +327,7 @@
                             </div>
                         </div>
                         <div class="speaker_name text-center">
-                            <h3>Bendict lawerence</h3>
+                            <h3>Mr.Bendict Lawrance</h3>
                             <p>Academic research Professor</p>
                             <p>Kyung Hee University,</p>
                                <p> South Korea</p>
