--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     Sustainable Computing <br>
                                     2025
                                 </h3>
-                            <h4 style="color:white; font-size: 30px;">Organized by <br> Department of Computer Applications</h4>
+                            <h4 style="color:white; ">Organized by <br> Department of Computer Applications</h4>
                             </div>
                             
                         </div>
