--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         
                                         
                                         <li><a href="#speakers">Speakers</a></li>
-                                        <li><a href="#schedule">Venue</a></li>
+                                        <li><a href="#venue">Venue</a></li>
                                         <li><a href="#contact">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-        <div class="countDOwn_area"  >
+        <div class="countDOwn_area" id="venue" >
             <div class="container"style="margin-top: -40px;">
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-md-6 col-lg-4">
