--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         
                                         
                                         <li><a href="#speakers">Speakers</a></li>
-                                        <li><a href="#venue">Venue</a></li>
+                                        <li><a href="https://maps.app.goo.gl/NKncPQ3fguPgPk6VA">Venue</a></li>
                                         <li><a href="#contact">Contact</a></li>
                                     </ul>
                                 </nav>
