--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- header-end -->
 
     <!-- slider_area_start -->
-    <div class="slider_area slider_bg_1" style="margin-top: -140px;">
+    <div class="slider_area slider_bg_1" style="margin-top: -150px;">
         <div class="slider_text">
             <div class="container">
                 <div class="position_relv">
@@ -293,7 +293,7 @@
                         </div>
                         <div class="speaker_name text-center">
                             <h3>Dr. U.Srinivasulu Reddy</h3>
-                            <p>Associate Professor, Department of Computer Applications</p>
+                            <p>Associate Professor,<br>Department of Computer Applications</p>
 
                             <p>NIT,Trichy</p>
                         </div>
@@ -321,7 +321,7 @@
                             <img src="img/speakers/bendict.jpg" alt="">
                             <div class="hover_overlay">
                                 <div class="social_icon">
-                                    <a href="https://www.linkedin.com/in/bendict-lawrance"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/bendict-lawrance-b06033205/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa fa-linkedin"></i></a>
                                     
                                 </div>
                             </div>
@@ -455,7 +455,7 @@
                   <div class="col-12">
                         <div class="date">
                             <h3>About the Department:</h3><br>
-                            <h3 style="font-size: 18px; color: black;">The Department of Computer Applications at Shrimati Indira Gandhi College, affiliated with Bharathidasan University, Tiruchirappalli, is dedicated to providing quality education in the field of computer applications. The department envisions empowering students with advanced knowledge and skills in computer applications, fostering innovation, ethical practices, and contributions to society through technology-driven solutions. It offers AICTE approved undergraduate and postgraduate programs, the Bachelor of Computer Applications (BCA) and the Master of Computer Applications (MCA). These programs are designed to equip students with expertise in programming, software development, data analytics, and emerging technologies such as artificial intelligence, machine learning, and cloud computing.</h3>
+                           <p style="font-size: 18px;">The Department of Computer Applications at Shrimati Indira Gandhi College, affiliated with Bharathidasan University, Tiruchirappalli, is dedicated to providing quality education in the field of computer applications. The department envisions empowering students with advanced knowledge and skills in computer applications, fostering innovation, ethical practices, and contributions to society through technology-driven solutions. It offers AICTE approved undergraduate and postgraduate programs, the Bachelor of Computer Applications (BCA) and the Master of Computer Applications (MCA). These programs are designed to equip students with expertise in programming, software development, data analytics, and emerging technologies such as artificial intelligence, machine learning, and cloud computing.</p>
                         </div>
                     </div>
                     </div>
