--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- header-end -->
 
     <!-- slider_area_start -->
-    <div class="slider_area slider_bg_1" style="margin-top: -150px;">
+    <div class="slider_area slider_bg_1" style="margin-top: -145px;">
         <div class="slider_text">
             <div class="container">
                 <div class="position_relv">
@@ -87,7 +87,7 @@
                                     Sustainable Computing <br>
                                     2025
                                 </h3>
-                            <h4 style="color:white; ">Organized by <br> Department of Computer Applications</h4>
+                            <h4 style="color:white; font-size: 25px; ">Organized by <br> Department of Computer Applications</h4>
                             </div>
                             
                         </div>
