--- a/index.html
+++ b/index.html
@@ -584,9 +584,9 @@
                                         Links
                                 </h3>
                                 <ul>
-                                    <li><a target="_blank" href="#event">Schedule</a></li>
-                                    <li><a target="_blank" href="#speakers">Speakers</a></li>
-                                    <li><a target="_blank" href="#contact">Contact</a></li>
+                                    <li><a  href="#event">Schedule</a></li>
+                                    <li><a  href="#speakers">Speakers</a></li>
+                                    <li><a  href="#contact">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
