--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                         <div class="col-xl-4 col-md-4 col-lg-4">
                             <div class="footer_widget">
                                 <h3 class="footer_title">
-                                        Venue
+                                       <a  href="https://maps.app.goo.gl/NKncPQ3fguPgPk6VA">Venue</a>
                                 </h3>
                                 <p>
                                  <a href="https://maps.app.goo.gl/NKncPQ3fguPgPk6VA" style="color: white;" >Shrimati Indira Gandhi college</a>   <br>
