--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img class="logo-39" src="s.png"  alt="">
+                                    <img class="logo-39" src="s1.png"  alt="">
                                 </a>
                             </div>
                         </div>
