--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                         9:30-10:30 am
                                     </div>
                                 </div>
-                                <p>Topic updated soon </p>
+                                <p>Topic will be updated soon </p>
                             </div>
                         </div>
                         <div class="single_speaker">
@@ -396,7 +396,7 @@
                                         11.00-12.00 pm
                                     </div>
                                 </div>
-                                <p>Topic updated soon </p>
+                                <p>Topic will be updated soon </p>
                             </div>
                         </div>
                         <div class="single_speaker">
@@ -408,7 +408,7 @@
                                         12:00-1:00 pm
                                     </div>
                                 </div>
-                                <p>Topic updated soon  </p>
+                                <p>Topic will be updated soon  </p>
                             </div>
 
                             
@@ -423,7 +423,7 @@
                                         2:00-3:00 pm
                                     </div>
                                 </div>
-                                <p>Topic updated soon </p>
+                                <p>Topic will be updated soon </p>
                             </div>
                     </div>
                     <div class="single_speaker">
