--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                     <div class="resister_text text-center">
                         <h3 >Download Brochure
                             </h3>
-                        <a href="Dept of Computer Applications_Internatoinal Conference_ICNGT Brouchure.pdf" class="boxed-btn-white">Download </a>
+                        <a href="International_Conference_final (1).pdf" class="boxed-btn-white">Download </a>
                     </div>
                 </div>
             </div>
